--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = label_printer
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.labelPrinter
+PRODUCT_BUNDLE_IDENTIFIER = com.itsng.labelPrinter
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2025 com.itsng. All rights reserved.
