--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.itsng" "\0"
             VALUE "FileDescription", "label_printer" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "label_printer" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 com.itsng. All rights reserved." "\0"
             VALUE "OriginalFilename", "label_printer.exe" "\0"
             VALUE "ProductName", "label_printer" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
