--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   barcode: ^2.2.9
+  package_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
