--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   barcode: ^2.2.9
+  cupertino_icons: ^1.0.8
+  file_selector: ^1.0.4
   package_info_plus: ^9.0.0
 
 dev_dependencies:
