--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  barcode: ^2.2.9
+  flutter_zxing: ^2.2.1
   cupertino_icons: ^1.0.8
   file_selector: ^1.0.4
   flutter_quill: ^11.4.2
@@ -45,6 +45,8 @@ dependencies:
   window_manager: ^0.5.1
   win32: ^5.5.0
   ffi: ^2.1.0
+  collection: ^1.19.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
