--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,20 +33,25 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_zxing: ^2.2.1
+  collection: ^1.19.1
   cupertino_icons: ^1.0.8
+  ffi: ^2.1.0
   file_selector: ^1.0.4
   flutter_quill: ^11.4.2
+  flutter_zxing: ^2.2.1
+  intl: ^0.20.2
+  mssql_connection: ^3.0.0
   package_info_plus: ^9.0.0
+  path: ^1.9.0
+  path_provider: ^2.1.5
   pdf: ^3.11.0
   printing: ^5.13.3
   screen_retriever: ^0.2.0
   shared_preferences: ^2.3.2
-  window_manager: ^0.5.1
+  sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.3
   win32: ^5.5.0
-  ffi: ^2.1.0
-  collection: ^1.19.1
-  intl: ^0.20.2
+  window_manager: ^0.5.1
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +78,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/data/labelmanager_server_connect_info.db
     - assets/images/ad_banner.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
