--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   ffi: ^2.1.0
   file_selector: ^1.0.4
+  flutter_launcher_icons: ^0.14.4
   flutter_quill: ^11.4.2
   flutter_zxing: ^2.2.1
   intl: ^0.20.2
