안드로이드 DB(MS SQL Server) 연결 적용

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,11 @@
 				"$dart-cli"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Install Flutter packages",
+			"type": "shell",
+			"command": "flutter pub get"
 		}
 	]
 }
