--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,12 +45,14 @@ dependencies:
   package_info_plus: ^9.0.0
   path: ^1.9.0
   path_provider: ^2.1.5
+  permission_handler: ^11.3.0
   pdf: ^3.11.0
   printing: ^5.13.3
   screen_retriever: ^0.2.0
   shared_preferences: ^2.3.2
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.3
+  sql_connection: ^1.0.1
   win32: ^5.5.0
   window_manager: ^0.5.1
 
