시작 다이얼로그 광고 이미지 다운로드 적용

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,15 +6,27 @@
 			"type": "shell",
 			"command": "flutter pub get",
 			"args": [],
-			"problemMatcher": [
-				"$dart-cli"
-			],
+			"problemMatcher": [],
 			"group": "build"
 		},
 		{
 			"label": "Install Flutter packages",
 			"type": "shell",
 			"command": "flutter pub get"
+		}
+		,
+		{
+			"label": "ADB: Silence MESA log",
+			"type": "shell",
+			"command": "powershell",
+			"args": [
+				"-NoProfile",
+				"-ExecutionPolicy",
+				"Bypass",
+				"-File",
+				"${workspaceFolder}/.vscode/adb_silence_mesa.ps1"
+			],
+			"problemMatcher": []
 		}
 	]
 }
