--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_quill: ^11.4.2
   flutter_zxing: ^2.2.1
+  http: ^1.5.0
   intl: ^0.20.2
   mssql_connection: ^3.0.0
   package_info_plus: ^9.0.0
@@ -53,6 +54,7 @@ dependencies:
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.3
   sql_connection: ^1.0.1
+  url_launcher: ^6.3.0
   win32: ^5.5.0
   window_manager: ^0.5.1
 
@@ -82,7 +84,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/data/labelmanager_server_connect_info.db
-    - assets/images/ad_banner.png
+    - assets/images/LabelManager_ITSad.bmp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
