시작 다이얼로그 로그인 처리 중...

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,7 +18,7 @@
 		{
 			"label": "ADB: Silence MESA log",
 			"type": "shell",
-			"command": "powershell",
+			"command": "C:/Program Files/PowerShell/7/pwsh.exe",
 			"args": [
 				"-NoProfile","-ExecutionPolicy","Bypass",
 				"-File","${workspaceFolder}/.vscode/adb_silence_mesa.ps1"
