--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   url_launcher: ^6.3.0
   win32: ^5.5.0
   window_manager: ^0.5.1
+  tabbed_view: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +86,8 @@ flutter:
   assets:
     - assets/data/labelmanager_server_connect_info.db
     - assets/images/LabelManager_ITSad.bmp
+    - assets/images/LogoPhone.webp
+    - assets/images/MainLogo.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
