--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   win32: ^5.5.0
   window_manager: ^0.5.1
   tabbed_view: ^2.0.0
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
