--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  charset_converter: ^2.3.0
   collection: ^1.19.1
   cupertino_icons: ^1.0.8
+  dropdown_button2: ^2.3.9
   ffi: ^2.1.0
   file_selector: ^1.0.4
   flutter_launcher_icons: ^0.14.4
@@ -54,11 +56,10 @@ dependencies:
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.3
   sql_connection: ^1.0.1
+  tabbed_view: ^2.0.0
   url_launcher: ^6.3.0
   win32: ^5.5.0
   window_manager: ^0.5.1
-  tabbed_view: ^2.0.0
-  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
