--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,5 @@
 	"powershell.enableProfileLoading": false,
 	// PSES 상세 로그 수집
 	//"powershell.developer.editorServicesLogLevel": "Trace"
-	"powershell.developer.editorServicesLogLevel": "Trace"
+	"powershell.developer.editorServicesLogLevel": "Warning"
 }
