안드로이드 폴더 생성 권한 처리 중...

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,38 +1,21 @@
 {
-	"version": "2.0.0",
-	"tasks": [
-		{
-			"label": "Install Flutter packages",
-			"type": "shell",
-			"command": "flutter pub get",
-			"args": [],
-			"problemMatcher": [],
-			"group": "build"
-		},
-		{
-			"label": "Install Flutter packages",
-			"type": "shell",
-			"command": "flutter pub get"
-		}
-		,
-		{
-			"label": "ADB: Silence MESA log",
-			"type": "shell",
-			"command": "C:/Program Files/PowerShell/7/pwsh.exe",
-			"args": [
-				"-NoProfile","-ExecutionPolicy","Bypass",
-				"-File","${workspaceFolder}/.vscode/adb_silence_mesa.ps1"
-			],
-			"problemMatcher": [],
-			"presentation": {
-				"reveal": "never",          // 터미널 패널 자동 표시 금지
-				"echo": false,              // 실행 커맨드 라인 표시 안 함
-				"focus": false,
-				"panel": "dedicated",
-				"showReuseMessage": false,
-				"clear": false,
-				"revealProblems": "never"
-			}
-		}
-	]
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "ADB: Silence MESA log",
+      "type": "shell",
+      "command": "powershell",
+      "args": [
+        "-ExecutionPolicy",
+        "Bypass",
+        "-File",
+        "${workspaceFolder}/.vscode/adb_silence_mesa.ps1"
+      ],
+      "presentation": {
+        "reveal": "silent",
+        "panel": "shared"
+      },
+      "problemMatcher": []
+    }
+  ]
 }
