--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   charset_converter: ^2.3.0
   collection: ^1.19.1
   cupertino_icons: ^1.0.8
+  device_info_plus: ^10.1.0
   dropdown_button2: ^2.3.9
   ffi: ^2.1.0
   file_selector: ^1.0.4
+  file_selector_platform_interface: ^2.6.2 # file_selector 패키지 사용 시 필요
   flutter_launcher_icons: ^0.14.4
   flutter_quill: ^11.4.2
   flutter_zxing: ^2.2.1
@@ -52,7 +54,7 @@ dependencies:
   pdf: ^3.11.0
   printing: ^5.13.3
   screen_retriever: ^0.2.0
-  shared_preferences: ^2.3.2
+  shared_preferences: ^2.5.3
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.3
   sql_connection: ^1.0.1
@@ -60,6 +62,9 @@ dependencies:
   url_launcher: ^6.3.0
   win32: ^5.5.0
   window_manager: ^0.5.1
+
+  r_get_ip:
+    path: ./pub.dev/r_get_ip
 
 dev_dependencies:
   flutter_test:
