--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,14 +50,16 @@ dependencies:
   package_info_plus: ^9.0.0
   path: ^1.9.0
   path_provider: ^2.1.5
-  permission_handler: ^11.3.0
+  permission_handler: ^12.0.1
   pdf: ^3.11.0
   printing: ^5.13.3
+  saf: ^1.0.4
   screen_retriever: ^0.2.0
   shared_preferences: ^2.5.3
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.3
   sql_connection: ^1.0.1
+  synchronized: ^3.4.0
   tabbed_view: ^2.0.0
   url_launcher: ^6.3.0
   win32: ^5.5.0
@@ -65,7 +67,6 @@ dependencies:
 
   r_get_ip:
     path: ./pub.dev/r_get_ip
-  synchronized: ^3.4.0
 
 dev_dependencies:
   flutter_test:
